test: 단위 테스트 코드 작성
- 배치의 각 컴포넌트 별로 단위 테스트 작성
- dto를 record 형식으로 변경